--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
         <div class="shadow-overlay"></div>
         <div class="home-content">
             <div class="row home-content__main">
-                <h3>Based in Jakarta</h3>
                 <h1>
                     UI / UX ENGINEER
                 </h1>
+                <h3>Based in Jakarta</h3>
             </div>
             <div class="home-content__scroll">
                 <a href="#about" class="scroll-link smoothscroll">
@@ -116,7 +116,7 @@
               <br>
               <br>
                 <p>
-                i am a hardworking person, i handle problems with patience and persistence. i am very cooperative working in a group and also adaptable in a new environment. i look forward working for a modern and possionate establishment so i can contribute my ideas to society.</p>
+                I am a hardworking person, I handle problems with patience and persistence. I am very cooperative working in a group and also adaptable in a new environment. I look forward working for a modern and possionate establishment so I can contribute my ideas to society.</p>
         </div>
     </div> <!-- end about-desc -->
         <div class="row about-stats stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
