--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Portofolio</title>
+    <title>Faturachman Dwi Putro</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
