updated alt to about images

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
         </div> <!-- end section-header -->
         <div class="row about-desc" data-aos="fade-up">
-              <img src="images/avatars/profpic.jpg">
+              <img src="images/avatars/profpic.jpg" alt="profpic">
               <br>
               <br>
                 <p>
