--- a/index.html
+++ b/index.html
@@ -384,18 +384,8 @@
     </section> <!-- end s-contact -->
     <!-- footer
     ================================================== -->
-    <footer>
-        <div class="row footer-bottom">
-            <div class="col-twelve">
-                <div class="copyright">
-                    <span>© Fatur Putro 2018</span>
-                </div>
-                <div class="go-top">
-                    <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
-                </div>
-            </div>
-        </div> <!-- end footer-bottom -->
-    </footer> <!-- end footer -->
+    <script language=javascript>document.write(unescape('%3Cfooter%3E%0A%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22row%20footer-bottom%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22col-twelve%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22copyright%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cspan%3E%A9%20Fatur%20Putro%202018%3C/span%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22go-top%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Ca%20class%3D%22smoothscroll%22%20title%3D%22Back%20to%20Top%22%20href%3D%22%23top%22%3E%3Ci%20class%3D%22icon-arrow-up%22%20aria-hidden%3D%22true%22%3E%3C/i%3E%3C/a%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%3C/div%3E%20%3C%21--%20end%20footer-bottom%20--%3E%0A%20%20%20%20%3C/footer%3E%20%3C%21--%20end%20footer%20--%3E'))</script>
+
     <!-- preloader
     ================================================== -->
     <div id="preloader">
