--- a/index.html
+++ b/index.html
@@ -102,8 +102,6 @@
             <div class="home-content__line"></div>
         </div> <!-- end home-content -->
     </section> <!-- end s-home -->
-    <!-- about
-    ================================================== -->
     <section id='about' class="s-about">
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
@@ -118,13 +116,9 @@
                 <p>
                 I am a hardworking person, I handle problems with patience and persistence. I am very cooperative working in a group and also adaptable in a new environment. I look forward working for a modern and possionate establishment so I can contribute my ideas to society.</p>
         </div>
-    </div> <!-- end about-desc -->
-        <div class="row about-stats stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
-        </div> <!-- end about-stats -->
+    </div>
         <div class="about__line"></div>
-    </section> <!-- end s-about -->
-    <!-- services
-    ================================================== -->
+    </section> 
     <section id='services' class="s-services">
       <div class="overlay"></div>
       <div class="shadow-overlay"></div>
@@ -377,17 +371,21 @@
                         <li>
                             <a href="https://www.linkedin.com/in/faturputro/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         </li>
-                    </ul> <!-- end contact-social -->
-                </div> <!-- end contact-info -->
-            </div> <!-- end contact-secondary -->
-        </div> <!-- end contact-content -->
-    </section> <!-- end s-contact -->
-    <!-- footer
-    ================================================== -->
-    <script language=javascript>document.write(unescape('%3Cfooter%3E%0A%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22row%20footer-bottom%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22col-twelve%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22copyright%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cspan%3E%A9%20Fatur%20Putro%202018%3C/span%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%20class%3D%22go-top%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Ca%20class%3D%22smoothscroll%22%20title%3D%22Back%20to%20Top%22%20href%3D%22%23top%22%3E%3Ci%20class%3D%22icon-arrow-up%22%20aria-hidden%3D%22true%22%3E%3C/i%3E%3C/a%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C/div%3E%0A%20%20%20%20%20%20%20%20%3C/div%3E%20%3C%21--%20end%20footer-bottom%20--%3E%0A%20%20%20%20%3C/footer%3E%20%3C%21--%20end%20footer%20--%3E'))</script>
-
-    <!-- preloader
-    ================================================== -->
+                    </ul> 
+                </div> 
+            </div> 
+        </div> 
+    </section> 
+    <footer>
+        <div class="row footer-bottom">
+                <div class="copyright">
+                    <span>© Fatur Putro 2018</span>
+                </div>
+                <div class="go-top">
+                    <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
+                </div>
+        </div> 
+    </footer> 
     <div id="preloader">
         <div id="loader">
             <div class="line-scale-pulse-out">
@@ -399,8 +397,6 @@
             </div>
         </div>
     </div>
-    <!-- Java Script
-    ================================================== -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
