--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <br>
               <br>
                 <p>
-                I am a hardworking person, I handle problems with patience and persistence. I am very cooperative working in a group and also adaptable in a new environment. I look forward working for a modern and possionate establishment so I can contribute my ideas to society.</p>
+                I am a passionate and hardworking person who is used to handle problems with patience and persistence. My cooperative nature of working in a group, really helps me to complete the work quickly and precisely. A dynamic working environment also gives me the energy to contribute my ideas to the society. That's why I always look forward to working in a fast-paced community, which concern most about good performances and a modern establishment.</p>
         </div>
     </div>
         <div class="about__line"></div>
