--- a/index.html
+++ b/index.html
@@ -90,10 +90,14 @@
         <div class="shadow-overlay"></div>
         <div class="home-content">
             <div class="row home-content__main">
-                <h1>
-                    UI / UX ENGINEER
-                </h1>
-                <h3>Based in Jakarta</h3>
+                <div class="heading-box">
+                    <h1>
+                        <span class="header-primary">UI / UX ENGINEER</span>
+                    </h1>
+                    <h3>
+                        <span class="header-sub">Based in Jakarta</span>
+                    </h3>
+                </div>
             </div>
             <div class="home-content__scroll">
                 <a href="#about" class="scroll-link smoothscroll">
