--- a/index.html
+++ b/index.html
@@ -196,53 +196,48 @@
                 </div>
             </div> <!-- end section-header -->
         <div id="skills" class="container-fluid" data-aos="fadeIn">
-        <div class="skillbar-title col-lg-1" ></div>
-        <div class="skillbar clearfix">
-            <div class="skillbar-bar"></div>
-            <div class="skill-bar-percent"></div>
-        </div>
-        <div class="row">
-            <div class="skillbar-title col-sm-3">HTML</div>
-            <div class="skillbar clearfix col-sm-6" data-percent="90%">
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent col-sm-3">90%</div>
+            <div class="row">
+                <div class="skillbar-title col-sm-3">HTML</div>
+                <div class="skillbar clearfix col-sm-6" data-percent="90%">
+                    <div class="skillbar-bar"></div>
+                    <div class="skill-bar-percent col-sm-3">90%</div>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="skillbar-title col-sm-3">JavaScript</div>
-            <div class="skillbar clearfix col-sm-6" data-percent="65%">
-                <div class="skillbar-bar" ></div>
-                <div class="skill-bar-percent col-sm-3">65%</div>
+            <div class="row">
+                <div class="skillbar-title col-sm-3">JavaScript</div>
+                <div class="skillbar clearfix col-sm-6" data-percent="70%">
+                    <div class="skillbar-bar" ></div>
+                    <div class="skill-bar-percent col-sm-3">70%</div>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="skillbar-title col-sm-3">CSS</div>
-            <div class="skillbar clearfix col-sm-6" data-percent="80%">
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent col-sm-3">80%</div>
+            <div class="row">
+                <div class="skillbar-title col-sm-3">CSS</div>
+                <div class="skillbar clearfix col-sm-6" data-percent="80%">
+                    <div class="skillbar-bar"></div>
+                    <div class="skill-bar-percent col-sm-3">80%</div>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="skillbar-title col-sm-3" >Adobe XD</div>
-            <div class="skillbar clearfix col-sm-6" data-percent="60%">
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent col-sm-3">60%</div>
+            <div class="row">
+                <div class="skillbar-title col-sm-3" >Adobe XD</div>
+                <div class="skillbar clearfix col-sm-6" data-percent="85%">
+                    <div class="skillbar-bar"></div>
+                    <div class="skill-bar-percent col-sm-3">85%</div>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="skillbar-title col-sm-3" >Adobe Muse</div>
-            <div class="skillbar clearfix col-sm-6" data-percent="50%">
-                <div class="skillbar-bar" ></div>
-                <div class="skill-bar-percent col-sm-3">50%</div>
+            <div class="row">
+                <div class="skillbar-title col-sm-3" >Adobe Photoshop</div>
+                <div class="skillbar clearfix col-sm-6" data-percent="75%">
+                    <div class="skillbar-bar" ></div>
+                    <div class="skill-bar-percent col-sm-3">75%</div>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="skillbar-title col-sm3" >MySQL</div>
-            <div class="skillbar clearfix col-sm-6" data-percent="85%">
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent col-sm-3">85%</div>
+            <div class="row">
+                <div class="skillbar-title col-sm3" >Adobe Illustrator</div>
+                <div class="skillbar clearfix col-sm-6" data-percent="65%">
+                    <div class="skillbar-bar"></div>
+                    <div class="skill-bar-percent col-sm-3">65%</div>
+                </div>
             </div>
-        </div>
         </div>
         </div> <!-- end works-content -->
     </section> <!-- end s-works -->
