--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 </div>
         </div> 
     </footer> 
-    <!--<div id="preloader">
+    <div id="preloader">
         <div id="loader">
             <div class="line-scale-pulse-out">
                 <div></div>
@@ -420,7 +420,7 @@
                 <div></div>
             </div>
         </div>
-    </div>-->
+    </div>
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
