--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         <h5>Call Me</h5>
                         <p>
                             Phone: (021) 837 85625<br>
-                            Mobile: (+62)817211296<br>
+                            Mobile: (+62) 817 2112 96<br>
                         </p>
                     </div>
                     <ul class="contact-social">
