--- a/index.html
+++ b/index.html
@@ -6,42 +6,24 @@
 <!--<![endif]-->
 
 <head>
-
-    <!--- basic page needs
-    ================================================== -->
     <meta charset="utf-8">
     <title>Faturachman Dwi Putro</title>
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <!-- mobile specific metas
-    ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- CSS
-    ================================================== -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-
-    <!-- script
-    ================================================== -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
-
-    <!-- favicons
-    ================================================== -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 
 <body id="top">
-
-    <!-- header
-    ================================================== -->
     <header class="s-header">
         <div class="header-logo">
             <a class="site-logo" href="index.html">
@@ -76,15 +58,13 @@
                         <a href="https://www.linkedin.com/in/faturputro/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     </li>
                 </ul>
-            </div> <!-- end header-nav__content -->
-        </nav>  <!-- end header-nav -->
+            </div> 
+        </nav>  
         <a class="header-menu-toggle" href="#0">
             <span class="header-menu-text">Menu</span>
             <span class="header-menu-icon"></span>
         </a>
-    </header> <!-- end s-header -->
-    <!-- home
-    ================================================== -->
+    </header> 
     <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/herobg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
@@ -105,15 +85,15 @@
                 </a>
             </div>
             <div class="home-content__line"></div>
-        </div> <!-- end home-content -->
-    </section> <!-- end s-home -->
+        </div> 
+    </section> 
     <section id='about' class="s-about">
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead subhead--dark">Hello There</h3>
                 <h1 class="display-1 display-1--light">ABOUT</h1>
             </div>
-        </div> <!-- end section-header -->
+        </div> 
         <div class="container-fluid">
             <div class="row about-desc" data-aos="fade-up">
                 <div class="col-md-6 about-img">
@@ -143,7 +123,7 @@
                 <h3 class="subhead">Services</h3>
                 <h1 class="display-2">PROGRAMMING</h1>
             </div>
-        </div> <!-- end section-header -->
+        </div> 
         <div class="row services-list block-1-3 block-tab-full">
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
@@ -184,17 +164,15 @@
                     </p>
                 </div>
             </div>
-        </div> <!-- end services-list -->
-    </section> <!-- end s-services -->
-    <!-- works
-    ================================================== -->
+        </div> 
+    </section>
     <section id='works' class="s-works">
             <div class="row section-header has-bottom-sep light-sep" data-aos="fade-up">
                 <div class="col-full">
                     <h3 class="subhead">ABOUT</h3>
                     <h1 class="display-1 display-1--light">SKILLS</h1>
                 </div>
-            </div> <!-- end section-header -->
+            </div>
         <div id="skills" class="container-fluid" data-aos="fadeIn">
             <div class="row">
                 <div class="skillbar-title col-sm-3">HTML</div>
@@ -239,10 +217,8 @@
                 </div>
             </div>
         </div>
-        </div> <!-- end works-content -->
-    </section> <!-- end s-works -->
-    <!-- clients
-    ================================================== -->
+        </div> 
+    </section> 
     <section id="clients" class="s-clients">
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
@@ -250,7 +226,7 @@
                 <h1 class="display-2">
           </h1>
             </div>
-        </div> <!-- end section-header -->
+        </div> 
         <div class="row clients-testimonials">
             <div class="col-full">
               <div id="cd-timeline" class="cd-container">
@@ -262,40 +238,40 @@
                           <h2>QUALITY ASSURANCE</h2>
                           <h3>PT. BOBOBOBO</h3>
           				<p>Daily check website function, testing API products, database maintenance, monitoring business's workflow.</p>
-          			</div> <!-- cd-timeline-content -->
-          		</div> <!-- cd-timeline-block -->
+          			</div> 
+          		</div> 
 
           		<div class="cd-timeline-block">
           			<div class="cd-timeline-img cd-movie" data-aos="zoom-in">
-          			</div> <!-- cd-timeline-img -->
+          			</div>
 
           			<div class="cd-timeline-content" data-aos="fade-up">
                         <h2>IT TEAM</h2>
                         <h3>Pertemuan Ilmiah Tahunan Perhimpunan Dokter Umum Indonesia</h3>
                         <p>Website maintenance, databasemaintenance, handling input and output all participants data, handling certificates, resolving participants problems. </p>
-          			</div> <!-- cd-timeline-content -->
-          		</div> <!-- cd-timeline-block -->
+          			</div>
+          		</div>
 
           		<div class="cd-timeline-block">
           			<div class="cd-timeline-img cd-picture" data-aos="zoom-in">
-          			</div> <!-- cd-timeline-img -->
+          			</div>
 
           			<div class="cd-timeline-content" data-aos="fade-up">
                           <h2>PERSONAL ASSISTANT MANAGER</h2>
                           <h3> Sandi's Catering</h3>
           				<p>Typing, preparing, and collating reports, filing, managing databases, logging and processing bills and expenses.</p>
-          			</div> <!-- cd-timeline-content -->
-          		</div> <!-- cd-timeline-block -->
+          			</div>
+          		</div>
 
           		<div class="cd-timeline-block">
           			<div class="cd-timeline-img cd-location" data-aos="zoom-in">
-          			</div> <!-- cd-timeline-img -->
+          			</div>
 
           			<div class="cd-timeline-content" data-aos="fade-up">
           				<h2>GUNADARMA UNIVERSITY</h2>
                           <h3>Information System</h3>
                           <p>Faculty of Computer Science and Information Technology.</p>
-          			</div> <!-- cd-timeline-content -->
+          			</div>
           		</div> <!-- cd-timeline-block -->
 
           		<div class="cd-timeline-block">
@@ -304,14 +280,11 @@
 
           			<div class="cd-timeline-content" data-aos="fade-up">
           				<h2>SMAN 55 JAKARTA</h2>
-          			</div> <!-- cd-timeline-content -->
-          		</div> <!-- cd-timeline-block -->
-          	</div> <!-- cd-timeline -->
-            </div> <!-- end col-full -->
-        </div> <!-- end client-testimonials -->
-    </section> <!-- end s-clients -->
-    <!-- contact
-    ================================================== -->
+          			</div> 
+          		</div> 
+          	</div> 
+            </div> 
+    </section> 
     <section id="contact" class="s-contact">
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
@@ -349,15 +322,13 @@
                     </div>
                     </fieldset>
                 </form>
-                <!-- contact-warning -->
                 <div class="message-warning">
                     Something went wrong. Please try again.
                 </div>
-                <!-- contact-success -->
                 <div class="message-success">
                     Your message was sent, thank you!<br>
                 </div>
-            </div> <!-- end contact-primary -->
+            </div> 
             <div class="contact-secondary">
                 <div class="contact-info">
                     <h3 class="h6 hide-on-fullwidth">Contact Info</h3>
