profile pic fix

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="row about-desc" data-aos="fade-up">
                 <div class="col-md-6 about-img">
                     <div class="img-about justify-content-center">
-                        <img src="images/avatars/profpic.jpg" alt="profpic">
+                        <img src="images/profpic.jpg" alt="profpic">
                     </div>
                 </div>  
                 <div class="col-md-6 about-p">
