--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
             </div>
             <div class="row">
                 <div class="skillbar-title col-sm-3">JavaScript</div>
-                <div class="skillbar clearfix col-sm-6" data-percent="70%">
+                <div class="skillbar clearfix col-sm-6" data-percent="75%">
                     <div class="skillbar-bar" ></div>
-                    <div class="skill-bar-percent col-sm-3">70%</div>
+                    <div class="skill-bar-percent col-sm-3">75%</div>
                 </div>
             </div>
             <div class="row">
@@ -231,6 +231,17 @@
         <div class="row clients-testimonials">
             <div class="col-full">
               <div id="cd-timeline" class="cd-container">
+                <div class="cd-timeline-block">
+                    <div class="cd-timeline-img cd-movie" data-aos="zoom-in">
+                    </div> <!-- cd-timeline-img -->
+
+                    <div class="cd-timeline-content" data-aos="fade-up">
+                        <h2>FRONT-END DEVELOPER</h2>
+                        <h3>Iconreel</h3>
+                        <p>UI/UX engineering, UI/UX design, maintain website functionality, quality assurance.</p>
+                    </div> <!-- cd-timeline-content -->
+
+                </div> <!-- cd-timeline-block -->
           		<div class="cd-timeline-block">
           			<div class="cd-timeline-img cd-picture" data-aos="zoom-in">
           			</div>
