--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
           			<div class="cd-timeline-content" data-aos="fade-up">
                           <h2>QUALITY ASSURANCE</h2>
-                          <h3>Bobobobo.com</h3>
+                          <h3>Bobobobo</h3>
           				<p>Daily check website function, testing API products, database maintenance, monitoring business's workflow.</p>
           			</div> 
           		</div> 
