--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <section id="clients" class="s-clients">
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">EXPERIENCES & ACHIEVEMENTS</h3>
+                <h3 class="subhead">WORK EXPERIENCE</h3>
                 <h1 class="display-2">
           </h1>
             </div>
