--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
 
                     <div class="cd-timeline-content" data-aos="fade-up">
                         <h2>FRONT-END DEVELOPER</h2>
-                        <h3>Iconreel</h3>
-                        <p>UI/UX engineering, UI/UX design, maintain website functionality, quality assurance.</p>
+                        <h3>Iconreel & Analisa.io</h3>
+                        <p>UI/UX engineering, UI/UX design (website & mobile app), maintain website functionality, quality assurance.</p>
                     </div> <!-- cd-timeline-content -->
 
                 </div> <!-- cd-timeline-block -->
