added experience and cv revamp

--- a/index.html
+++ b/index.html
@@ -231,12 +231,21 @@
         <div class="row clients-testimonials">
             <div class="col-full">
               <div id="cd-timeline" class="cd-container">
+                    <div class="cd-timeline-block">
+                            <div class="cd-timeline-img cd-picture" data-aos="zoom-in">
+                            </div>
+      
+                            <div class="cd-timeline-content" data-aos="fade-up">
+                                    <h2>FRONTEND ENGINEER</h2>
+                                    <h3>iFreight.id</h3>
+                                    <p>Develop website using Vue.js framework, analyze business plan, maintain website funnctionality.</p>
+                                </div> 
+                        </div> 
                 <div class="cd-timeline-block">
-                    <div class="cd-timeline-img cd-movie" data-aos="zoom-in">
-                    </div> <!-- cd-timeline-img -->
-
+                        <div class="cd-timeline-img cd-picture" data-aos="zoom-in">
+                        </div>
                     <div class="cd-timeline-content" data-aos="fade-up">
-                        <h2>FRONT-END DEVELOPER</h2>
+                        <h2>FRONTEND DEVELOPER</h2>
                         <h3>Iconreel & Analisa.io</h3>
                         <p>UI/UX engineering, UI/UX design (website & mobile app), maintain website functionality, quality assurance.</p>
                     </div> <!-- cd-timeline-content -->
