--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
         </div> 
         <div class="row services-list block-1-3 block-tab-full">
-            <div class="col-block service-item" data-aos="fade-up">
+            <div class="col-block service-item" data-aos="fade-up" data-aos-duration="600">
                 <div class="service-icon">
                     <i class="fab fa-js"></i>
                 </div>
@@ -139,7 +139,7 @@
                     <br>
                 </div>
             </div>
-            <div class="col-block service-item" data-aos="fade-up">
+            <div class="col-block service-item" data-aos="fade-up" data-aos-duration="600" data-aos-delay="400">
                 <div class="service-icon">
                     <i class="fas fa-code"></i>
                 </div>
@@ -152,7 +152,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-block service-item" data-aos="fade-up">
+            <div class="col-block service-item" data-aos="fade-up" data-aos-duration="600" data-aos-delay="800">
                 <div class="service-icon">
                     <i class="fab fa-css3"></i>
                 </div>
