--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <span class="header-menu-icon"></span>
         </a>
     </header> 
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/herobg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="https://firebasestorage.googleapis.com/v0/b/faturputro-ab596.appspot.com/o/assets%2Fjumbotron.jpg?alt=media&token=1310253d-f6cd-46c2-aa1d-2377cbb776a3" data-natural-width="3000" data-natural-height="2000" data-position-y="center">
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
         <div class="home-content">
@@ -98,7 +98,7 @@
             <div class="row about-desc" data-aos="fade-up">
                 <div class="col-md-6 about-img">
                     <div class="img-about justify-content-center">
-                        <img src="images/profpic.jpg" alt="profpic">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/faturputro-ab596.appspot.com/o/assets%2FWebp.net-resizeimage%20(1).jpg?alt=media&token=1fe9f035-b089-4095-8fcd-39127928afbf" alt="Faturachman Dwi Putro">
                     </div>
                 </div>  
                 <div class="col-md-6 about-p">
