--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <li><a class="smoothscroll"  href="#works" title="works">Skills</a></li>
                     <li><a class="smoothscroll"  href="#clients" title="clients">Experiences</a></li>
                     <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
-                    <li><a href="download/CV.pdf" download style="color:#1abc9c" title="download">Resume<i class="fas fa-file-download" style="margin-left:20px"></i></a>
+                    <li><a href="download/Curriculum Vitae.pdf" download style="color:#1abc9c" title="download">Resume<i class="fas fa-file-download" style="margin-left:20px"></i></a>
                 </ul>
                 <p>These are not just pixels on your screen, but mind and inspiration alive and breathing in your eyes.</p>
                 <ul class="header-nav__social">
